# DataGate

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  environment_setup.sh  main.py  pyproject.toml  requirements.txt  setup.sh
experiments/: README.md  environment_setup.sh  pyproject.toml  requirements.txt
experiments/archieved/: create_lakehouse_table.sql  dashboard_20260514.json  datagate_synapseml_lgbm_hpo_catalog.ipynb  experiment_container_stop.sh  kltn-synapseml-optimized-2x6-direct-synapse-params-shuffle18.ipynb  synapseml_lightgbm_cluster_optimized.ipynb  synapseml_lightgbm_final.ipynb  system-design.md  techcompare.md  write_bronze_table_parquet.py  write_silver_table.py
experiments/data/: .gitignore  data_download.py  data_download.sh  data_overview.ipynb  data_overview.py  download_data_tlc.py  upload_to_postgres.py
experiments/data_ingestion/: .env.example  Dockerfile
experiments/data_pipeline/: .env  .env.example  Dockerfile  pipeline-compose.yaml  pyproject.toml
experiments/data_source/: .env.example  data_scource_posgre.sql  docker-compose.yaml  upload_to_postgres.py
experiments/pipelines/: submit.sh
experiments/scripts/: INSTRUCTIONS.md  README.md  config.json  create_data_platform_table.sql  create_data_source_tables.sql  create_lakehouse_table.sql  create_table_in_bronze.sql  create_tlc_tripdata_tables.sql  dashboard_20260508.json  dashboard_20260514.json  data_download.sh  data_overview.sh  data_platform_download_jars.sh  data_source_setup.sh  data_source_upload_data.sh  download_data.sh  experiment_build.sh  experiment_setup.sh  experiment_submit_load_ds_to_bronze.sh  experiment_submit_spark_jobs.sh  from_csvs_to_data_source.py  from_parquets_to_data_source copy.py  from_parquets_to_data_source.py  from_parquets_to_data_source_dirty.py  make_dirty_citi_bike_tripdata.py  make_dirty_yellow_tripdata.py  make_dirty_yellow_tripdata.sh  make_experiment_yellow_tripdata.py  make_experiment_yellow_tripdata.sh  metadata_collection.sql  (+11 more)
(+852 files in other folders)
