[project]
name = "experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.40.59",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.135.2",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.1",
    "pyspark==3.5.7",
    "requests>=2.33.0",
    "schedule>=1.2.0",
    "sqlalchemy>=2.0.48",
    "tabulate>=0.10.0",
    "tqdm>=4.67.3",
    "trino>=0.337.0",
    "uvicorn>=0.42.0",
]
